# ChangeLog for games-strategy/lightyears
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-strategy/lightyears/ChangeLog,v 1.12 2010/08/14 05:53:18 mr_bones_ Exp $

  14 Aug 2010; Michael Sterrett <mr_bones_@gentoo.org>
  lightyears-1.3a.ebuild:
  install the manual as well (bug #332693)

  06 Apr 2010; Tupone Alfredo <tupone@gentoo.org> lightyears-1.3a.ebuild:
  Force python version to 2 . Bug #312285 by arfrever@gentoo.org

  21 Nov 2009; Markus Meier <maekke@gentoo.org> lightyears-1.3a.ebuild:
  x86 stable, bug #289136

  17 Oct 2009; Richard Freeman <rich0@gentoo.org> lightyears-1.3a.ebuild:
  amd64 stable - 289136

  14 Oct 2009; Michael Sterrett <mr_bones_@gentoo.org>
  lightyears-1.3a.ebuild:
  EAPI=2

*lightyears-1.3a (05 Nov 2008)

  05 Nov 2008; Tupone Alfredo <tupone@gentoo.org>
  +files/lightyears-1.3a-gentoo.patch, +lightyears-1.3a.ebuild:
  Version bump to 1.3a. Bug #233011 by chris salch

  29 May 2008; Ali Polatel <hawking@gentoo.org> lightyears-1.2a.ebuild:
  python_mod_optimize is ROOT aware.

  28 Mar 2008; Tristan Heaven <nyhm@gentoo.org> lightyears-1.2a.ebuild:
  Fix python eclass usage

  29 May 2007; Tristan Heaven <nyhm@gentoo.org> lightyears-1.2a.ebuild:
  Byte compile .py files for some speedup, bug #180191

  30 Apr 2007; Tristan Heaven <nyhm@gentoo.org> lightyears-1.2a.ebuild:
  keyword ~x86

  29 Apr 2007; Tupone Alfredo <tupone@gentoo.org> lightyears-1.2a.ebuild:
  Fix mkdirhier not available, bug #176394 by Federico Guglielmo Edoardo Granata

*lightyears-1.2a (27 Apr 2007)

  27 Apr 2007; Tupone Alfredo <tupone@gentoo.org>
  +files/lightyears-1.2a-gentoo.patch, +metadata.xml,
  +lightyears-1.2a.ebuild:
  New package, Bug #130485 by Alexandru Toma
