@@ -1,5 +1,25 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX lightyears-1.3a-gentoo.patch 968 RMD160 fd5792d117ecfeced59ee9d19a1e2d71396010d5 SHA1 481ec09e1a1ff858e90f9c745c94da39bf9dae0c SHA256 7ea3224c82a4ad1b877e91c896d976f29968f823f2dfd140107de84c746a985c
 DIST lightyears-1.3a.tar.gz 680843 RMD160 0a5dd05fe29002fe0a5d913cf6052611d54c32f7 SHA1 9ba3c48ce36d39c0d2bb44c7919f6fd301944ec2 SHA256 dd898452ce791321039bf895b50a77dab360c3866c98e3a80955fce71e637be0
-EBUILD lightyears-1.3a.ebuild 1337 RMD160 7acab3b67f506ab139014adc50e260cfc81a39e8 SHA1 f460362cb6328fc598c3b47d52362a489b3d503e SHA256 5dffe69b5c7306f5df706b42141de8a09a4272585554b18d6a0ae4b9491570ba
-MISC ChangeLog 1769 RMD160 9565892e41189b0aaa9f04375f449f112d9dcb85 SHA1 a47033e34c18ca8eaaef6fa38625e4cd5daee8d4 SHA256 054fa72d1f1edc9aac09cebec0f2798a7e78a3157ec69ea140bd5bc754bc5b00
+EBUILD lightyears-1.3a.ebuild 1336 RMD160 098b56e2ee3a88f209daf12ed9a45264a3bd6d92 SHA1 c74e7355a5c164a76eb1ed9175066b5c99561e87 SHA256 12950667e9531fdc16edac93eff05b161cbdcd3de84739ab2f46f5dcfd4e163d
+MISC ChangeLog 1896 RMD160 188b6c1ce1cc8fceace3fc3ab691b2acf827de13 SHA1 0d42c5d9b652e506aa142b270e842bab2276585d SHA256 522a76574cc651b46bb99205980741d806828bdf5b204e8d88548fe1f332c254
 MISC metadata.xml 366 RMD160 5d947375304d60e93c580163a09d6c27dea33a98 SHA1 a4b1a9849dfc45aaca4fb7cac65e695cf4277cd7 SHA256 c21e8e6d236aef6628b448f839689a39ea28201b15ff08fffb1aadd717f7f6b7
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iQIcBAEBAgAGBQJNtdtkAAoJENgZr6v6gHY0N7QQALUesvxpOQNxVZU6cIodSW0R
+mKj7/qhTfvl0zbqNQoz0sal9Zg9wXCfOotXuMiQoeBLDqB9Ux82qgesnb4pUyQ1J
+sjq3YgggKB/iTkzz7Bp9g1b55xGZVT/9gCTEKMKplx3KNlviepR+mNmi814SrJXU
+5Akbb7pv6fw77mi/tUusukVJ1Qp2/djQM7CCHn3l+X/HiBxcoUFcEmYETqgzhhCJ
+i0blbeks6jSEfv4Mpb+36CDpSjpJJo6ixsgBVSzyMLqwCAHOKg/zuNO1YnhBG2RA
+xiUBqTqcKfFX0VAyNX2iDLZg0tuu0qmQFzql29aj8EnWCdC8IjfNYNlLrgQQlWFk
+ewxs+nmilQFESda1SNEZ+QsRCpp5odgBBKIRXyhqAORKBT7C3e3kQ1X5k4Rg+jIh
+6cN9ISGLkXEAkUJlSelLTPMiMqVuEFKagRvbdRS+To1uIQtzkd0r6qNvai4ueVZV
+SLVy0Y84knQij8wc2gMrMkOsq/p0KAZtrpehVETvG96Bn5Vnse3bpGSAOjGpFhND
+7RdwrkDR52W242FZNK9UVTj09DhstNwlwXN6ukHxFaCtd5I24dZ1ichAJC89fmM7
+/Py9vBV8WNl3bmbaTYZ0huLLBS6ilseVhSjbA116FNp0HKDeDcZB58sNH+o0FZF5
+wvd3duhpKtXWKsmjYJRY
+=BbBr
+-----END PGP SIGNATURE-----
