@@ -1,8 +1,8 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/lightyears/lightyears-1.3a.ebuild,v 1.6 2010/08/14 05:53:18 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/lightyears/lightyears-1.3a.ebuild,v 1.7 2011/04/25 20:36:38 arfrever Exp $
 
-EAPI=2
+EAPI=3
 PYTHON_DEPEND="2"
 inherit eutils python games
 
